Spring Boot 3, Java21